--- a/website/static/stylesheets/home.sass
+++ b/website/static/stylesheets/home.sass
@@ -6,9 +6,7 @@
     #slideshow-wrapper
       margin: auto
       text-align: center
-
-      @media (min-width: 1072px)
-        width: 1000px
+      max-width: 900px
 
       span
         font-style: italic
