--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -6,8 +6,29 @@ html, body
 
 #header, #content, #footer
   @include clearfix
-  margin: 0 3%
+  @include box-sizing(border-box)
+  width: 1200px
+  margin: auto
 
+  @media (max-width: 1395px)
+    width: 86%
+    margin: 0 7%
+
+  @media (max-width: 1200px)
+    width: 88%
+    margin: 0 6%
+
+  @media (max-width: 1100px)
+    width: 90%
+    margin: 0 5%
+
+  @media (max-width: 1000px)
+    width: 92%
+    margin: 0 4%
+
+  @media (max-width: 900px)
+    width: 94%
+    margin: 0 3%
 
 #header
   position: relative
