--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -57,6 +57,9 @@ html, body
 #page-title
   margin-bottom: $whitespace
 
+  &:empty
+    margin-bottom: 0px
+
 
 .page-subtitle
   margin-bottom: $whitespace / 2
