Center webpage text

--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -1,13 +1,15 @@
 #webpage
-  #webpage-info, #webpage-content, #webpage-tags
-    float: left
-    margin-bottom: $whitespace
+  #page-title, #webpage-info, #webpage-text, #webpage-tags
+    float: none
     width: 100%
-
-  #webpage-content
     max-width: 750px
+    margin-left: auto
+    margin-right: auto
 
-  .markdown
+  #webpage-info, #webpage-text, #webpage-tags
+    margin-bottom: $whitespace
+
+  #webpage-text
     .image-wrapper
       display: table
       margin-left: auto
