--- a/creations/templates/webpage.html
+++ b/creations/templates/webpage.html
@@ -19,7 +19,7 @@
 </div>
 {% endif %}
 
-<div id="webpage-content" class="markdown">
+<div id="webpage-text" class="markdown">
   {{ webpage.content|markdown }}
 </div>
 
