--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -687,25 +687,27 @@ html, body {
       #speaking-program #files ul ul ul {
         list-style-type: disc; }
 
-#webpage #webpage-info, #webpage #webpage-content, #webpage #webpage-tags {
-  float: left;
-  margin-bottom: 36px;
-  width: 100%; }
-#webpage #webpage-content {
-  max-width: 750px; }
-#webpage .markdown .image-wrapper {
+#webpage #page-title, #webpage #webpage-info, #webpage #webpage-text, #webpage #webpage-tags {
+  float: none;
+  width: 100%;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto; }
+#webpage #webpage-info, #webpage #webpage-text, #webpage #webpage-tags {
+  margin-bottom: 36px; }
+#webpage #webpage-text .image-wrapper {
   display: table;
   margin-left: auto;
   margin-right: auto; }
-  #webpage .markdown .image-wrapper img {
+  #webpage #webpage-text .image-wrapper img {
     max-width: 500px;
     height: auto; }
-  #webpage .markdown .image-wrapper .image-caption {
+  #webpage #webpage-text .image-wrapper .image-caption {
     display: table-caption;
     caption-side: bottom; }
-  #webpage .markdown .image-wrapper.banner {
+  #webpage #webpage-text .image-wrapper.banner {
     width: 100%; }
-    #webpage .markdown .image-wrapper.banner img {
+    #webpage #webpage-text .image-wrapper.banner img {
       width: 100%;
       max-width: 100%; }
 
