Dynamically load artwork on radio-program page, too

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -158,7 +158,8 @@
     @include two-columns(35%, 60%, 600px)
 
     #artwork
-      width: 100%
+      img
+        width: 100%
 
     #above-mp3
       float: left
