Add darker "chickadee cream" color to palette

--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -202,7 +202,7 @@
 
     th
       background: $moss
-      color: $chickadee-cream
+      color: $content-background
       font-family: $sans-font-family
       letter-spacing: 1px
 
