--- a/waystohelp/static/stylesheets/waystohelp.sass
+++ b/waystohelp/static/stylesheets/waystohelp.sass
@@ -43,7 +43,7 @@
         z-index: 2
         @include sans-font(light)
         font-size: $base-font-size + 5
-        color: $chickadee-cream
+        color: $content-background
 
         &.number
           float: left
