--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -1,16 +1,21 @@
 // Colors
-$chickadee-cream: #f5f4ee
+$chickadee-light-cream: #f5f4ee
+$chickadee-cream: #eceade
 $chickadee-white: #deedf2
+
 $chickadee-light-gray: #cfd3cf
 $chickadee-gray: #9ba5a9
 $chickadee-dark-gray: #777e86
 $chickadee-black: #3c3a47
+
 $moss: #788c6d
 $moss-light: lighten($moss, 10%)
 $moss-dark: darken($moss, 10%)
 $peach-pink: #de8d88
 $peach-orange: #deb888
 
+
+$content-background: $chickadee-light-cream
 
 // Links
 $link-color: darken($peach-pink, 5%)
