--- a/website/static/stylesheets/page.sass
+++ b/website/static/stylesheets/page.sass
@@ -36,7 +36,7 @@ html, body
 
 #content
   min-height: 500px
-  background: $chickadee-cream
+  background: $content-background
   padding: $whitespace * 1.5
   border-radius: 2px
   overflow: hidden
