Go back to one shade of chickadee-cream

--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -1,6 +1,5 @@
 // Colors
-$chickadee-light-cream: #f5f4ee
-$chickadee-cream: #eceade
+$chickadee-cream: #f5f4ee
 $chickadee-white: #deedf2
 
 $chickadee-light-gray: #cfd3cf
@@ -14,8 +13,8 @@ $moss-dark: darken($moss, 10%)
 $peach-pink: #de8d88
 $peach-orange: #deb888
 
+$content-background: $chickadee-cream
 
-$content-background: $chickadee-light-cream
 
 // Links
 $link-color: darken($peach-pink, 5%)
