Add chickadees to header

--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -38,6 +38,7 @@ $card-border-radius: 2px
 @import markdown
 @import page
 @import header
+@import chickadees
 @import footer
 @import adminbar
 @import home
