--- a/website/static/stylesheets/header.sass
+++ b/website/static/stylesheets/header.sass
@@ -42,8 +42,8 @@
   #menu
     float: left
     clear: both
-    width: 100%
-    margin: $whitespace / 4 0
+    width: 80%
+    margin: $whitespace / 4 10%
     font-size: 22px
 
     a
