--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   {% include 'head.html' %}
-
   <body id="{% block body_id %}{% endblock %}">
     {% include 'admin_bar.html' %}
 
     {% include 'header.html' %}
 
     <div id="content">
+      <span class="chickadee chickadee-l"></span>
+      <span class="chickadee chickadee-r"></span>
+
       <h2 id="page-title">{% block page_title %}{% endblock%}</h2>
 
       {% block content %}{% endblock %}
