Add max chickadee size

--- a/website/static/stylesheets/chickadees.sass
+++ b/website/static/stylesheets/chickadees.sass
@@ -10,6 +10,7 @@
   top: -149px
   left: -50px
   width: 15%
+  max-width: 150px
   height: 154px
   background-image: $chickadee-l
   background-position: bottom right
@@ -27,6 +28,7 @@
   top: -145px
   right: -13px
   width: 10%
+  max-width: 100px
   height: 154px
   background-image: $chickadee-r
   background-position: bottom left
