--- a/website/static/stylesheets/adminbar.sass
+++ b/website/static/stylesheets/adminbar.sass
@@ -6,10 +6,10 @@ $admin-padding: 10px
   height: $admin-height
   background: $chickadee-black
 
-  font-family: $sans-font-family
   color: $chickadee-light-gray
   font-size: $base-font-size - 3
   line-height: $admin-height
+  @include sans-font
   letter-spacing: 0.6px
   text-align: left
 
