sass style conventions

--- a/website/static/stylesheets/adminbar.sass
+++ b/website/static/stylesheets/adminbar.sass
@@ -1,6 +1,7 @@
 $admin-height: 28px
 $admin-padding: 10px
 
+
 #admin-bar
   width: 100%
   height: $admin-height
@@ -27,22 +28,26 @@ $admin-padding: 10px
       background: transparentize(#fff, 0.9)
       color: $peach-pink
 
-  .logout, .bird-search
+  .logout,
+  .bird-search
     float: right
 
-  form, button, input
+  form,
+  button,
+  input
     display: inline
 
-    button, input
-      border: none
-      border-radius: 3px
-      padding: 2px 4px
-      font-family: inherit
-      font-size: inherit
-      letter-spacing: inherit
+  button,
+  input
+    border: none
+    border-radius: 3px
+    padding: 2px 4px
+    font-family: inherit
+    font-size: inherit
+    letter-spacing: inherit
 
-    input
-      background: $chickadee-light-gray
+  input
+    background: $chickadee-light-gray
 
-    button
-      background: $chickadee-gray
+  button
+    background: $chickadee-gray
